--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -11,30 +11,34 @@
 
 <body>
     <div class="container">
-        <div class="music-player" id="music-player">
-            <div class="album-artwork">
-                <img src="album-artwork.jpg" alt="Album Artwork">
-            </div>
-            <div class="song-details">
-                <h3 class="song-title">Song Title</h3>
-                <p class="artist">Artist Name</p>
-                <div class="progress-bar" onclick="seek(event)">
-                    <div class="progress"></div>
+        <div class="music-player-container">
+            <div class="music-player" id="music-player">
+                <div class="album-artwork">
+                    <img src="album-artwork.jpg" alt="Album Artwork">
                 </div>
-                <div class="current-time">
-                    <span id="current-time">0:00</span>
-                    <span> / </span>
-                    <span id="total-time">0:00</span>
+                <div class="song-details">
+                    <h3 class="song-title">Song Title</h3>
+                    <p class="artist">Artist Name</p>
+                    <div class="progress-bar" onclick="seek(event)">
+                        <div class="progress"></div>
+                    </div>
+                    <div class="current-time">
+                        <span id="current-time">0:00</span>
+                        <span> / </span>
+                        <span id="total-time">0:00</span>
+                    </div>
+                </div>
+                <div class="controls">
+                    <button class="control-btn" id="prev-btn">&#171;</button>
+                    <button class="control-btn" id="play-pause-btn">&#9658;</button>
+                    <button class="control-btn" id="next-btn">&#187;</button>
+                    <button class="control-btn" id="loop-btn">&#8634;</button>
+                    <input type="range" class="volume-slider" id="volume-slider" min="0" max="1" step="0.01" value="1">
                 </div>
             </div>
-            <div class="controls">
-                <button class="control-btn" id="prev-btn">&#171;</button>
-                <button class="control-btn" id="play-pause-btn">&#9658;</button>
-                <button class="control-btn" id="next-btn">&#187;</button>
-                <button class="control-btn" id="loop-btn">&#8634;</button>
-                <input type="range" class="volume-slider" id="volume-slider" min="0" max="1" step="0.01" value="1">
-            </div>
-
+        </div>
+        <div class="canvas-container">
+            <canvas id="my-canvas"></canvas>
         </div>
         <div class="playlist-container">
             <div class="playlist">
