Improved Logic For Play Button in The Beginning

--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -28,6 +28,8 @@
                         <span id="total-time">0:00</span>
                     </div>
                 </div>
+                <label id="choose-song-label" class="choose-song-label" style="display: none;">Please choose a song to
+                    play</label>
                 <div class="controls">
                     <button class="control-btn" id="prev-btn">&#171;</button>
                     <button class="control-btn" id="play-pause-btn">&#9658;</button>
