Custom Prompt Alert Generate and Canvas Wave Added

--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -53,6 +53,22 @@
             </div>
         </div>
     </div>
+    <div class="custom-input-form" id="customInputForm">
+        <div class="input-content">
+            <h3>Please enter your name:</h3>
+            <input type="text" id="inputField">
+            <button onclick="submitName()">Submit</button>
+        </div>
+    </div>
+
+    <div class="custom-alert" id="customAlert">
+        <div class="alert-content">
+            <h3>Hey there!</h3>
+            <p>This is a custom alert created just for you!</p>
+            <button onclick="closeCustomAlert()">Got it!</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
