Canvas Color Change

--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -63,8 +63,8 @@
 
     <div class="custom-alert" id="customAlert">
         <div class="alert-content">
-            <h3>Hey there!</h3>
-            <p>This is a custom alert created just for you!</p>
+            <h3></h3>
+            <p>Enjoy !!</p>
             <button onclick="closeCustomAlert()">Got it!</button>
         </div>
     </div>
