Blog Images Added

--- a/Pet Adoption/index.html
+++ b/Pet Adoption/index.html
@@ -64,7 +64,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 px-4">
             <!-- Pet 1 Card -->
             <div class="bg-white p-6 rounded-lg shadow-md pet-card dog">
-                <img src="./img/img1.jpg" alt="Pet 1" class="w-full mb-4 rounded-lg pet-card">
+                <img src="./img/img1.jpg" alt="Pet 1" class="w-full mb-4 rounded-lg pet-card card">
                 <h3 class="text-xl font-semibold mb-2">Dog</h3>
                 <p class="text-gray-700">Age: 2 years</p>
                 <p class="text-gray-700 mt-2">Personality: Friendly and energetic</p>
@@ -76,7 +76,7 @@
 
             <!-- Pet 2 Card -->
             <div class="bg-white p-6 rounded-lg shadow-md pet-card cat">
-                <img src="./img/img2.jpeg" alt="Pet 2" class="w-full mb-4 rounded-lg pet-card">
+                <img src="./img/img2.jpeg" alt="Pet 2" class="w-full mb-4 rounded-lg pet-card card">
                 <h3 class="text-xl font-semibold mb-2">Cat</h3>
                 <p class="text-gray-700">Age: 1 year</p>
                 <p class="text-gray-700 mt-2">Personality: Playful and affectionate</p>
@@ -88,7 +88,7 @@
 
 
             <div class="bg-white p-6 rounded-lg shadow-md pet-card rabbit">
-                <img src="./img/img3.jpeg" alt="Pet 3" class="w-full mb-4 rounded-lg pet-card">
+                <img src="./img/img3.jpeg" alt="Pet 3" class="w-full mb-4 rounded-lg pet-card card">
                 <h3 class="text-xl font-semibold mb-2">Rabbit</h3>
                 <p class="text-gray-700">Age: 1 years</p>
                 <p class="text-gray-700 mt-2">Personality: Gentle and curious</p>
@@ -99,7 +99,7 @@
             </div>
 
             <div class="bg-white p-6 rounded-lg shadow-md pet-card hamster">
-                <img src="./img/img4.jpeg" alt="Pet 4" class="w-full mb-4 rounded-lg pet-card">
+                <img src="./img/img4.jpeg" alt="Pet 4" class="w-full mb-4 rounded-lg pet-card card">
                 <h3 class="text-xl font-semibold mb-2">Hamster</h3>
                 <p class="text-gray-700">Age: 2 years</p>
                 <p class="text-gray-700 mt-2">Personality: Curious and active</p>
@@ -110,7 +110,7 @@
             </div>
 
             <div class="bg-white p-6 rounded-lg shadow-md pet-card rabbit">
-                <img src="./img/img5.jpeg" alt="Pet 5" class="w-full mb-4 rounded-lg pet-card">
+                <img src="./img/img5.jpeg" alt="Pet 5" class="w-full mb-4 rounded-lg pet-card card">
                 <h3 class="text-xl font-semibold mb-2">Rabbit</h3>
                 <p class="text-gray-700">Age: 2 years</p>
                 <p class="text-gray-700 mt-2">Personality: Gentle and curious</p>
@@ -121,7 +121,7 @@
             </div>
 
             <div class="bg-white p-6 rounded-lg shadow-md pet-card rabbit">
-                <img src="./img/img6.jpeg" alt="Pet 6" class="w-full mb-4 rounded-lg pet-card">
+                <img src="./img/img6.jpeg" alt="Pet 6" class="w-full mb-4 rounded-lg pet-card card">
                 <h3 class="text-xl font-semibold mb-2">Rabbit</h3>
                 <p class="text-gray-700">Age: 3 years</p>
                 <p class="text-gray-700 mt-2">Personality: Gentle and curious</p>
@@ -212,21 +212,21 @@
         <h2 class="text-4xl font-semibold text-center mb-8">Latest Blog Posts</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                <img src="./img/blog-post1.jpg" alt="Blog Post 1" class="w-full mb-4 rounded-lg">
+                <img src="./img/blog1.png" alt="Blog Post 1" class="w-full mb-4 rounded-lg">
                 <h3 class="text-xl font-semibold mb-2">Caring for Your New Feline Friend</h3>
                 <p class="text-gray-700">Learn the essential tips and tricks for providing a happy and healthy home for
                     your newly adopted cat.</p>
                 <a href="link_to_blog_post1" class="mt-4 block text-blue-500 hover:underline">Read More</a>
             </div>
             <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                <img src="./img/blog-post1.jpg" alt="Blog Post 1" class="w-full mb-4 rounded-lg">
+                <img src="./img/blog2.jpeg" alt="Blog Post 1" class="w-full mb-4 rounded-lg">
                 <h3 class="text-xl font-semibold mb-2">Caring for Your New Feline Friend</h3>
                 <p class="text-gray-700">Learn the essential tips and tricks for providing a happy and healthy home for
                     your newly adopted cat.</p>
                 <a href="link_to_blog_post1" class="mt-4 block text-blue-500 hover:underline">Read More</a>
             </div>
             <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                <img src="./img/blog-post1.jpg" alt="Blog Post 1" class="w-full mb-4 rounded-lg">
+                <img src="./img/blog3.jpeg" alt="Blog Post 1" class="w-full mb-4 rounded-lg">
                 <h3 class="text-xl font-semibold mb-2">Caring for Your New Feline Friend</h3>
                 <p class="text-gray-700">Learn the essential tips and tricks for providing a happy and healthy home for
                     your newly adopted cat.</p>
